; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_elf32-ppc.c_ppc_elf_vxworks_link_hash_table_create.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_elf32-ppc.c_ppc_elf_vxworks_link_hash_table_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfd_link_hash_table = type { i32 }
%struct.ppc_elf_link_hash_table = type { i32, i32, i8*, i8*, i32 }

@PLT_VXWORKS = common dso_local global i32 0, align 4
@VXWORKS_PLT_ENTRY_SIZE = common dso_local global i8* null, align 8
@VXWORKS_PLT_INITIAL_ENTRY_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.bfd_link_hash_table* (i32*)* @ppc_elf_vxworks_link_hash_table_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.bfd_link_hash_table* @ppc_elf_vxworks_link_hash_table_create(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.bfd_link_hash_table*, align 8
  %4 = alloca %struct.ppc_elf_link_hash_table*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call %struct.bfd_link_hash_table* @ppc_elf_link_hash_table_create(i32* %5)
  store %struct.bfd_link_hash_table* %6, %struct.bfd_link_hash_table** %3, align 8
  %7 = load %struct.bfd_link_hash_table*, %struct.bfd_link_hash_table** %3, align 8
  %8 = icmp ne %struct.bfd_link_hash_table* %7, null
  br i1 %8, label %9, label %26

9:                                                ; preds = %1
  %10 = load %struct.bfd_link_hash_table*, %struct.bfd_link_hash_table** %3, align 8
  %11 = bitcast %struct.bfd_link_hash_table* %10 to %struct.ppc_elf_link_hash_table*
  store %struct.ppc_elf_link_hash_table* %11, %struct.ppc_elf_link_hash_table** %4, align 8
  %12 = load %struct.ppc_elf_link_hash_table*, %struct.ppc_elf_link_hash_table** %4, align 8
  %13 = getelementptr inbounds %struct.ppc_elf_link_hash_table, %struct.ppc_elf_link_hash_table* %12, i32 0, i32 0
  store i32 1, i32* %13, align 8
  %14 = load i32, i32* @PLT_VXWORKS, align 4
  %15 = load %struct.ppc_elf_link_hash_table*, %struct.ppc_elf_link_hash_table** %4, align 8
  %16 = getelementptr inbounds %struct.ppc_elf_link_hash_table, %struct.ppc_elf_link_hash_table* %15, i32 0, i32 4
  store i32 %14, i32* %16, align 8
  %17 = load i8*, i8** @VXWORKS_PLT_ENTRY_SIZE, align 8
  %18 = load %struct.ppc_elf_link_hash_table*, %struct.ppc_elf_link_hash_table** %4, align 8
  %19 = getelementptr inbounds %struct.ppc_elf_link_hash_table, %struct.ppc_elf_link_hash_table* %18, i32 0, i32 3
  store i8* %17, i8** %19, align 8
  %20 = load i8*, i8** @VXWORKS_PLT_ENTRY_SIZE, align 8
  %21 = load %struct.ppc_elf_link_hash_table*, %struct.ppc_elf_link_hash_table** %4, align 8
  %22 = getelementptr inbounds %struct.ppc_elf_link_hash_table, %struct.ppc_elf_link_hash_table* %21, i32 0, i32 2
  store i8* %20, i8** %22, align 8
  %23 = load i32, i32* @VXWORKS_PLT_INITIAL_ENTRY_SIZE, align 4
  %24 = load %struct.ppc_elf_link_hash_table*, %struct.ppc_elf_link_hash_table** %4, align 8
  %25 = getelementptr inbounds %struct.ppc_elf_link_hash_table, %struct.ppc_elf_link_hash_table* %24, i32 0, i32 1
  store i32 %23, i32* %25, align 4
  br label %26

26:                                               ; preds = %9, %1
  %27 = load %struct.bfd_link_hash_table*, %struct.bfd_link_hash_table** %3, align 8
  ret %struct.bfd_link_hash_table* %27
}

declare dso_local %struct.bfd_link_hash_table* @ppc_elf_link_hash_table_create(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
